--- a/uclibc/lib/contrib/uclibc/extra/Configs/Config.in
+++ b/uclibc/lib/contrib/uclibc/extra/Configs/Config.in
@@ -1916,6 +1916,23 @@ config UCLIBC_HAS_GNU_GETSUBOPT
 	  Answer Y if you want to include getsubopt().
 
 	  Most people will answer Y.
+
+config UCLIBC_HAS_ARGP
+       bool "Support argp (as standalone shared object)"
+       default n
+       help
+         Argp is an interface for parsing unix-style argument vectors. Unlike
+         the common getopt interface, it provides many advanced features in
+         addition to parsing options, such as automatic output in response to
+         `--help' and `--version' options.
+         A library can export an argp option parser, which programs can easily
+         use in conjunction with their own option parser.
+         A new shared object "libuargp" is created. The "libc.so" linker script
+         contains the AS_NEEDED entry for getting the libuargp linked automatically.
+         Argp support is needed by elfutils libdw.
+
+         Most people can safely answer N.
+
 endmenu
 
 
