uclibc/ia64: enable and fix compile issues
Enable ia64 in the menu.
Fix build for architectures withou ld.so support.
Fix syntax error in bits/byteswap.h.

Change-Id: I1c20ca5df0b937e0d8ccd396b5bd9d898f263df0

--- a/uclibc/lib/contrib/uclibc/extra/Configs/Config.in
+++ b/uclibc/lib/contrib/uclibc/extra/Configs/Config.in
@@ -87,8 +87,8 @@ config TARGET_i386
 #config TARGET_i960
 #	bool "i960 (BROKEN)"
 
-#config TARGET_ia64
-#	bool "ia64"
+config TARGET_ia64
+	bool "ia64"
 
 config TARGET_m68k
 	bool "m68k"
