uclibc/alpha: upstream architecture update
This commit squashes the following upstream commits:

Change-Id: Iee636c65a854a649b016f8ecbc0dcdee583054cf
alpha: enable in menu
alpha: fix header name
alpha: fix kernel_stat struct
alpha: add special umount2 handling

--- a/uclibc/lib/contrib/uclibc/extra/Configs/Config.in
+++ b/uclibc/lib/contrib/uclibc/extra/Configs/Config.in
@@ -47,8 +47,8 @@ choice
 	help
 	  The architecture of your target.
 
-#config TARGET_alpha
-#	bool "alpha"
+config TARGET_alpha
+	bool "alpha"
 
 config TARGET_arc
 	bool "arc"
