uclibc: remove __UCLIBC_ASM_GLOBAL_DIRECTIVE__
.globl can be used for every architecture so remove the define.
Sync with GNU C library.

Change-Id: I4988dcb36a5ed1d6a0e031950dbe4621b2ef785e

--- a/uclibc/lib/contrib/uclibc/libc/sysdeps/linux/v850/Makefile
+++ b/uclibc/lib/contrib/uclibc/libc/sysdeps/linux/v850/Makefile
@@ -9,7 +9,7 @@ TOPDIR=../../../../
 include $(TOPDIR)Rules.mak
 
 CFLAGS += -I..
-ASFLAGS += -I.. -D__ASSEMBLER -DASM_GLOBAL_DIRECTIVE=.globl
+ASFLAGS += -I.. -D__ASSEMBLER
 
 TARGET_MACHINE_TYPE=$(shell $(CC) -dumpmachine)
 
