--- a/uclibc/lib/contrib/uclibc/libm/Makefile.in
+++ b/uclibc/lib/contrib/uclibc/libm/Makefile.in
@@ -23,7 +23,6 @@
 subdirs += libm libm/$(TARGET_ARCH)
 
 CFLAGS-libm := -DNOT_IN_libc -DIS_IN_libm $(SSP_ALL_CFLAGS)
-CFLAGS-libm += -D_IEEE_LIBM
 
 LDFLAGS-$(UCLIBC_FORMAT_DSBT_ELF)-libm.so := -Wl,--dsbt-index=5
 LDFLAGS-libm.so := $(LDFLAGS)
@@ -59,11 +58,11 @@ libm_CSRC := \
 	e_exp.c e_fmod.c e_hypot.c \
 	e_lgamma_r.c e_log.c e_log2.c e_log10.c \
 	e_pow.c e_remainder.c e_rem_pio2.c e_scalb.c e_sinh.c \
-	e_sqrt.c k_cos.c k_rem_pio2.c k_sin.c k_standard.c k_tan.c \
+	e_sqrt.c k_cos.c k_rem_pio2.c k_sin.c k_tan.c \
 	s_asinh.c s_atan.c s_cbrt.c s_ceil.c s_copysign.c s_cos.c \
 	s_erf.c s_expm1.c s_fabs.c s_finite.c s_floor.c s_frexp.c \
 	s_ilogb.c s_ldexp.c s_lib_version.c s_lrint.c s_lround.c s_llround.c \
-	s_log1p.c s_logb.c s_matherr.c s_modf.c s_nextafter.c \
+	s_log1p.c s_logb.c s_modf.c s_nextafter.c \
 	s_nextafterf.c s_round.c \
 	s_rint.c s_scalbn.c s_signgam.c s_significand.c s_sin.c s_tan.c \
 	s_tanh.c s_trunc.c \
