Add AArch64 support
Change-Id: Ieca99d7859ec530021c1dc7cff80fadeb4a57e2f

--- a/l4re_kernel/server/src/Makefile
+++ b/l4re_kernel/server/src/Makefile
@@ -7,9 +7,11 @@ SRC_CC         := main.cc globals.cc region.cc loader.cc \
 
 SRC_S_mips     := loader_mips.S
 CXXFLAGS_mips += -mplt -mno-shared -DL4_LOADER_USE_ASM_STUB=1
+#CXXFLAGS_arm64 += -mcmodel=large
 
 DEFAULT_RELOC_x86   := 0xb0000000
 DEFAULT_RELOC_arm   := 0xb0000000
+DEFAULT_RELOC_arm64 := 0xc0000000
 DEFAULT_RELOC_ppc32 := 0xb0000000
 DEFAULT_RELOC_amd64 := 0x70000000
 DEFAULT_RELOC_mips  := 0x70000000
