--- a/ldscripts/Makefile
+++ b/ldscripts/Makefile
@@ -26,6 +26,7 @@ LD_SCRIPTS      = main_stat.ld main_rel.ld main_dyn.ld
 # to find the uclibc files
 UCLIBC_ARCH_x86   := i386
 UCLIBC_ARCH_arm   := arm
+UCLIBC_ARCH_arm64 := arm64
 UCLIBC_ARCH_amd64 := x86_64
 UCLIBC_ARCH_mips  := mips
 UCLIBC_ARCH_ppc32 := powerpc
