--- a/ldso/ldso/Makefile
+++ b/ldso/ldso/Makefile
@@ -8,6 +8,7 @@ UCC_DIR := $(PKGDIR)/../uclibc/lib/uclibc
 DIR_amd64 := x86_64
 DIR_x86   := i386
 DIR_arm   := arm
+DIR_arm64 := arm64
 DIR_ppc32 := powerpc
 DIR_sparc := sparc
 DIR_mips  := mips
@@ -48,6 +49,7 @@ CPPFLAGS := -DNOT_IN_libc -DIS_IN_rtld \
 DEFINES_x86-l4f   += -DUSE_TLS=1 -DUSE___THREAD=1
 DEFINES_amd64-l4f += -DUSE_TLS=1 -DUSE___THREAD=1
 DEFINES_arm-l4f   += -DUSE_TLS=1 -DUSE___THREAD=1
+DEFINES_arm64-l4f += -DUSE_TLS=1 -DUSE___THREAD=1
 DEFINES_sparc-l4f += -DUSE_TLS=1 -DUSE___THREAD=1
 DEFINES_mips-l4f  += -DUSE_TLS=1 -DUSE___THREAD=1
 
