--- a/sigma0/server/src/Makefile
+++ b/sigma0/server/src/Makefile
@@ -10,6 +10,7 @@ DEFINES             += -DL4_MINIMAL_LIBC
 DEFAULT_RELOC_x86   := 0x00100000
 DEFAULT_RELOC_amd64 := 0x00100000
 DEFAULT_RELOC_arm   := 0x000c0000
+DEFAULT_RELOC_arm64 := 0x000d0000
 DEFAULT_RELOC_mips  := 0x00200000
 DEFAULT_RELOC_sparc := 0x01200000
 DEFAULT_RELOC_ppc32 := 0x00100000
@@ -22,6 +23,7 @@ SRC_CC := init.cc memmap.cc page_alloc.cc mem_man.cc io_backend.cc \
 SRC_CC_x86-l4f   := ioports_x86.cc
 SRC_CC_amd64-l4f := ioports_x86.cc
 SRC_CC_arm-l4f   := ioports_none.cc
+SRC_CC_arm64-l4f := ioports_none.cc
 SRC_CC_mips-l4f  := ioports_none.cc
 SRC_CC_ppc32-l4f := ioports_none.cc
 SRC_CC_sparc-l4f := ioports_none.cc
