uclibc: use a single libc and deduplicate threading code
Similar to musl libc a single libc has many benefits and solves
some open issues with uClibc-ng.

- no pthread_mutex_* weak symbols exported anymore
- applications no longer failing to link when either
  -lrt or -lpthread are missing for dynamic and static linking mode
- smaller C library
- slightly better runtime performance

Change-Id: I26a19907d71d1ab0a7c19c5d7a09619760587c17
Requires-Change-Id: Ie1bf964c4d0827e579942ffa756de973c71a8a78
Requires-Change-Id: I6b33d1d3f7eda6d2ac9af9ee4fac1c8227d39d36

--- a/uclibc/lib/Makefile
+++ b/uclibc/lib/Makefile
@@ -4,3 +4,6 @@ L4DIR	?= $(PKGDIR)/../../..
 TARGET = uclibc libpthread minimal_l4re
 
 include $(L4DIR)/mk/subdir.mk
+
+uclibc minimal_l4re: libpthread
+
