ned: add mode for controling ned via IPC
When in server mode, ned accepts commands via IPC from a fixed
capability. This change also adds a simple interface for sending
commands.

Run-Tests: l4re-core/ned
Change-Id: I89c6ce2123a2c94f01984151cc17560cd7e2b965

--- a/test/Control
+++ b/test/Control
@@ -1,3 +1,3 @@
-requires: stdlibs libstdc++ libpthread
+requires: stdlibs libstdc++ libpthread ned
 optional: atkins
 Maintainer: sarah.hoffmann@kernkonzept.com
