--- a/test/ned/Makefile
+++ b/test/ned/Makefile
@@ -9,5 +9,7 @@ REQUIRES_LIBS  := libpthread atkins
 DEPENDS_PKGS   := atkins
 
 MOE_CFG_test_exit_wait := exit_wait.cfg
+MOE_CFG_test_ipc_command := ipc_command.cfg
+REQUIRED_MODULES_test_ipc_command += ipc_command_x.cfg
 
 include $(L4DIR)/mk/test.mk
