--- a/ldso/ldso/Makefile
+++ b/ldso/ldso/Makefile
@@ -5,6 +5,8 @@ CON_DIR := $(PKGDIR)/../uclibc/lib/contrib/uclibc/ldso
 PTH_DIR := $(PKGDIR)/../uclibc/lib/libpthread
 UCC_DIR := $(PKGDIR)/../uclibc/lib/uclibc
 
+PC_EXTRA = Link_DynLinker= rom/libld-l4.so
+
 DIR_amd64 := x86_64
 DIR_x86   := i386
 DIR_arm   := arm
@@ -53,13 +55,10 @@ DEFINES_arm64-l4f += -DUSE_TLS=1 -DUSE___THREAD=1
 DEFINES_sparc-l4f += -DUSE_TLS=1 -DUSE___THREAD=1
 DEFINES_mips-l4f  += -DUSE_TLS=1 -DUSE___THREAD=1
 
-LDFLAGS  =  -Bsymbolic -Bstatic --warn-common --sort-common \
+LDFLAGS  =  -nocrt1 -Bsymbolic -Bstatic --warn-common --sort-common \
             --no-undefined -e _start -z defs -z now \
             --discard-locals --discard-all   \
             --gc-sections -ll4sys-direct $(GCCLIB)
-
-CRT0 :=
-CRTN :=
 
 include $(L4DIR)/mk/Makeconf
 
@@ -82,4 +81,3 @@ CXXFLAGS += -DL4_NO_RTTI -fno-rtti -fno-exceptions -fvisibility=hidden \
 
 CPPFLAGS := $(filter-out -DL4SYS_USE_UTCB_WRAP=1, $(CPPFLAGS))
 
-L4_LIBS :=
