Ned: Add support for resolving strings to caps
Add support to resolve a hierarchical name like "rom/hello" to the
capability L4.Env.rom:query("hello") in the context of namespace
creation form a table.

This means you can write
  `caps = { xxx = { zzz = "rom/hello" } }`
and ned would translate this to
  `caps = { xxx = { zzz = L4.Env.rom:q("hello") } }`

Related to ticket #495.

Change-Id: I5ef949c3578301d3ae80263cfd7beab85ba7427c

--- a/test/ned/namespace_composition.cfg
+++ b/test/ned/namespace_composition.cfg
@@ -19,7 +19,10 @@ L4.default_loader:start(
     -- a fresh namespace created for testing purposes
     testns = {
       -- it contains a name for the l4re module
-      l4re = L4.Env.rom:q("l4re"),
+      l4re = "rom/l4re",
+      nested = {
+        child = "rom/l4re"
+      }
     },
     -- the platform control capability
     pfc = L4.Env.icu,
