--- a/test/ned/start.cfg
+++ b/test/ned/start.cfg
@@ -19,7 +19,7 @@ l:start(
       test_no_d = L4.Env.factory:create(L4.Proto.Factory),
       dummy_cap1 = dummy_cap1,
       dummy_cap2 = dummy_cap2,
-      test_namespace = {name1 = dummy_cap1, name2 = dummy_cap2, name_ph = "ph"},
+      test_namespace = {name1 = dummy_cap1, name2 = dummy_cap2},
       svr_cap = chan:svr(),
       no_svr_cap = chan,
       pfc = L4.Env.icu,
