moe: test rw-module
Change-Id: I42876b61843ce4f2c61dfca12c7985b8a75c6759
Requires-Change-Id: I976e710604248d89e96472f22279405f7cb2ae23

--- a/test/ned/Makefile
+++ b/test/ned/Makefile
@@ -12,5 +12,7 @@ MOE_CFG_test_exit_wait := exit_wait.cfg
 MOE_CFG_test_ipc_command := ipc_command.cfg
 MOE_CFG_test_namespace_composition := namespace_composition.cfg
 REQUIRED_MODULES_test_ipc_command += ipc_command_x.cfg
+MOE_CFG_test_rw_module := rw_module.cfg
+REQUIRED_MODULES_test_rw_module += test_namespace_composition:rw
 
 include $(L4DIR)/mk/test.mk
