Revert "libpthread: Remove whole-archive grouping"
Breaks std::thread


This reverts commit e47414869790d0f113c90c16a8ba466e7f5c8b7c.

Change-Id: I59d74065762fd7eda7b42c7fbe9a667b3b68dfea

--- a/uclibc/lib/libpthread/src/Makefile
+++ b/uclibc/lib/libpthread/src/Makefile
@@ -4,6 +4,9 @@ L4DIR      ?= $(PKGDIR)/../../..
 TARGET      = libpthread.a libpthread.so
 
 PC_FILENAME = libpthread
+# this will proper work with pkg-config >= 0.28, for older versions
+# pkg-config's reordering will not harm but std::thread will not work
+PC_LIBS_libpthread := --whole-archive -lpthread --no-whole-archive
 
 CONTRIBDIR = $(PKGDIR)/../uclibc/lib/contrib/uclibc
 LDSODIR    = $(CONTRIBDIR)/ldso/ldso
