libstdc++-headers: use order-only prerequisites
Use order-only prerequisites for creating directories as on each
directory operaion the modified date of the directory itself changes
leading to a forced rebuild of the target on the next run.

Change-Id: Iea05a269faba22a69baff4c6bcfff0bbe769f421

--- a/libstdc++-headers/include-std/Makefile
+++ b/libstdc++-headers/include-std/Makefile
@@ -69,11 +69,11 @@ std_header_list = $(strip $(1)) std_$(strip $(1)).h
 
 choose_std_header = $(word 1, $(wildcard $(foreach DIR,$(STDCXX_STD_DIRS),$(addprefix $(INCSRC_DIR)/$(DIR)/, $(call std_header_list, $(1))))))
 
-$(STDCXX_CSTD_HEADERS_ABS): %: $(INSTALL_INCDIR_X)
+$(STDCXX_CSTD_HEADERS_ABS): %: | $(INSTALL_INCDIR_X)
 	@$(INSTALL_LINK_MESSAGE)
 	$(VERBOSE)$(LN) -sf $(call choose_std_header,$(notdir $@)) $@
 
-$(LIBSUPC_HI): %: $(INSTALL_INCDIR_X)
+$(LIBSUPC_HI): %: | $(INSTALL_INCDIR_X)
 	@$(INSTALL_LINK_MESSAGE)
 	$(VERBOSE)$(call install_header, libsupc++/$(notdir $@), $(patsubst $(INSTALL_INCDIR_X)/%,%,$@))
 
@@ -81,7 +81,7 @@ $(INSTALL_INCDIR_X):
 	@$(INSTALL_LINK_MESSAGE) $(INSTALL_INCDIR_X)
 	$(VERBOSE)$(INSTALL) -d $(INSTALL_INCDIR_X)
 
-all:: $(INSTALL_INCDIR_X) $(LIBSUPC_HI) $(STDCXX_CSTD_HEADERS_ABS)
+all:: $(LIBSUPC_HI) $(STDCXX_CSTD_HEADERS_ABS) | $(INSTALL_INCDIR_X)
 	@$(INSTALL_LINK_MESSAGE)
 	$(VERBOSE)$(call install_config_header, $(ALLOCATOR_H),     c++allocator.h)
 	$(VERBOSE)$(call install_config_header, $(CLOCALE_H),       c++locale.h)
