test: add startup tests for ned
Change-Id: I0da0bbf717bac12f0d2c1aab77fc0338b22a66de

--- a/test/ned/Makefile
+++ b/test/ned/Makefile
@@ -11,6 +11,8 @@ DEPENDS_PKGS   := atkins
 MOE_CFG_test_exit_wait := exit_wait.cfg
 MOE_CFG_test_ipc_command := ipc_command.cfg
 MOE_CFG_test_namespace_composition := namespace_composition.cfg
+MOE_CFG_test_start := start.cfg
+
 REQUIRED_MODULES_test_ipc_command += ipc_command_x.cfg
 MOE_CFG_test_rw_module := rw_module.cfg
 REQUIRED_MODULES_test_rw_module += test_namespace_composition:rw
