--- a/test/ned/Makefile
+++ b/test/ned/Makefile
@@ -12,6 +12,7 @@ MOE_CFG_test_exit_wait := exit_wait.cfg
 MOE_CFG_test_ipc_command := ipc_command.cfg
 MOE_CFG_test_namespace_composition := namespace_composition.cfg
 MOE_CFG_test_start := start.cfg
+MOE_CFG_test_rom_overwrite := rom_overwrite.cfg
 
 REQUIRED_MODULES_test_ipc_command += ipc_command_x.cfg
 MOE_CFG_test_rw_module := rw_module.cfg
