test: add svr rights testing to start test for ned
Change-Id: I85478a75ee82f77c18fdd8a9820395e1002a7be1

--- a/test/ned/start.cfg
+++ b/test/ned/start.cfg
@@ -5,19 +5,23 @@ local L4 = require("L4")
 
 local dummy_cap1 = L4.Env.factory:create(L4.Proto.Factory)
 local dummy_cap2 = L4.Env.factory:create(L4.Proto.Factory)
+local l = L4.default_loader
+local chan = l:new_channel()
 
-L4.default_loader:start(
+l:start(
   {
     caps = {
-      test_w = L4.default_loader:create_namespace({}):m("rw"),
-      test_no_w = L4.default_loader:create_namespace({}),
+      test_w = l:create_namespace({}):m("rw"),
+      test_no_w = l:create_namespace({}),
       test_s = L4.Env.user_factory:create(L4.Proto.Factory, 20000):m("rs"),
       test_no_s = L4.Env.user_factory:create(L4.Proto.Factory, 20000),
       test_d = L4.Env.factory:create(L4.Proto.Factory):m("rd"),
       test_no_d = L4.Env.factory:create(L4.Proto.Factory),
       dummy_cap1 = dummy_cap1,
       dummy_cap2 = dummy_cap2,
-      test_namespace = {name1 = dummy_cap1, name2 = dummy_cap2, name_ph = "ph"}
+      test_namespace = {name1 = dummy_cap1, name2 = dummy_cap2, name_ph = "ph"},
+      svr_cap = chan:svr(),
+      no_svr_cap = chan
     },
     log = {"test_start_log_tag", "red"}
   },
