test/ned: Fix typo in test string
The string is still longer than 512 Bytes
and qualifies for the test.

Change-Id: I137f79b1cea1fe00d35caaf841a2af35fcd86fc6

--- a/test/ned/ipc_command_x.cfg
+++ b/test/ned/ipc_command_x.cfg
@@ -3,7 +3,7 @@ function test()
   return "hooo";
 end
 
-overly_long_string="This is and overly long string that does not fint into the UTCB. therefore it has to be very very very very very very very very very very very very very very very very very very very very very very very very very very very very very very very very very very very very super super super super very super very very overly super hyper super hyper super super very very very very very very very very super hyper super hyper overly long. Otherwise we might not trigger the test we want to test in our case we need more than 512 bytes"
+overly_long_string="This is and overly long string that does not fit into the UTCB. therefore it has to be very very very very very very very very very very very very very very very very very very very very very very very very very very very very very very very very very very very very super super super super very super very very overly super hyper super hyper super super very very very very very very very very super hyper super hyper overly long. Otherwise we might not trigger the test we want to test in our case we need more than 512 bytes"
 
 
 
