--- a/test/cxx/Makefile
+++ b/test/cxx/Makefile
@@ -3,6 +3,9 @@ L4DIR  ?= $(PKGDIR)/../..
 
 TEST_GROUP    := l4re-core/cxx
 
+SRC_CC_test_item += item.cc
+SRC_CC_test_avl_set += item.cc
+
 REQUIRES_LIBS := libstdc++ atkins
 DEPENDS_PKGS  := atkins
 
