--- a/libsupc++/Control
+++ b/libsupc++/Control
@@ -1,3 +1,3 @@
 provides: libsupc++
-requires: libstdc++-headers libc
+requires: libstdc++-headers libc libpthread
 maintainer: warg@os.inf.tu-dresden.de
