uclibc: upstream updates
This commit combines the following updates for:

* Architectures unsupported by l4re:

csky: bugfix ltp open12 failed.
csky: support bsd-setjmp and bsd-_setjmp.
hppa: fix runtime issues
or1k: add F_{DUPFD_CLOEXEC, SETPIPE_SZ, GETPIPE_SZ}
sparc32: sparc32: Add nop before __startcontext to stop unwinding
tile: add basic support for tilegx
mention Tile architecture

* Host-side utilities not used by l4re:

add gettext-tiny tools
fix install error

* The uclibc buildsystem not used by l4re:

quieten some warnings when EXTRA_WARNINGS not set
fenv: only allow for ppc e500
fix compile of msgfmt/msgmerge
libiconv: remove function, which is not available w/o libiconv a4 macros

* Uclibc-ng features not supported by l4re:

use __NR_newfstatat only for modern Linux architectures
common/sendfile.c: bugfix can't support offset is NULL
lseek.c: bugfix ltp lseek01.c
Revert "common/sendfile.c: bugfix can't support offset is NULL"
common/sendfile.c: bugfix can't support offset is NULL

Change-Id: I876ee166df16b83fd4bbc7d5eef7e3d95530758f

--- a/uclibc/lib/contrib/uclibc/extra/Configs/Config.in
+++ b/uclibc/lib/contrib/uclibc/extra/Configs/Config.in
@@ -40,6 +40,7 @@ choice
 	default TARGET_sh if DESIRED_TARGET_ARCH = "sh"
 	default TARGET_sparc if DESIRED_TARGET_ARCH = "sparc"
 	default TARGET_sparc64 if DESIRED_TARGET_ARCH = "sparc64"
+	default TARGET_tile if DESIRED_TARGET_ARCH = "tile"
 	default TARGET_x86_64 if DESIRED_TARGET_ARCH = "x86_64"
 	default TARGET_xtensa if DESIRED_TARGET_ARCH = "xtensa"
 	help
@@ -124,6 +125,9 @@ config TARGET_sparc
 
 config TARGET_sparc64
 	bool "sparc64"
+
+config TARGET_tile
+	bool "tile"
 
 config TARGET_x86_64
 	bool "x86_64"
@@ -230,6 +234,10 @@ endif
 
 if TARGET_sparc64
 source "extra/Configs/Config.sparc64"
+endif
+
+if TARGET_tile
+source "extra/Configs/Config.tile"
 endif
 
 if TARGET_x86_64
