Move arg/env passing for start() into separate test
Fixes #771

Change-Id: I5afb98af275adeb0ab177ab84f2caf8e935839a7

--- a/test/ned/Makefile
+++ b/test/ned/Makefile
@@ -10,6 +10,7 @@ DEPENDS_PKGS   := atkins
 
 EXTRA_TEST := ipc_cmd_direct_loop
 
+MOE_CFG_test_arg := arg.cfg
 MOE_CFG_test_exit_wait := exit_wait.cfg
 MOE_CFG_test_ipc_command := ipc_command.cfg
 MOE_CFG_test_namespace_composition := namespace_composition.cfg
