--- a/test/ned/start.cfg
+++ b/test/ned/start.cfg
@@ -21,6 +21,5 @@ L4.default_loader:start(
     },
     log = {"test_start_log_tag", "red"}
   },
-  "rom/"..t.TEST_PROG..' arg1 arg2 -arg3',
-  { ENV_VAR1 = "env_var1", ENV_VAR2 = "env_var2"}
+  "rom/"..t.TEST_PROG
 )
