correct name MOE_CFG > NED_CFG
Change-Id: I4eb14bc184cad47585da6e970c4f29bd79e5f223

--- a/test/ned/Makefile
+++ b/test/ned/Makefile
@@ -10,18 +10,18 @@ DEPENDS_PKGS   := atkins
 
 EXTRA_TEST := ipc_cmd_direct_loop
 
-MOE_CFG_test_arg := arg.cfg
-MOE_CFG_test_exit_wait := exit_wait.cfg
-MOE_CFG_test_ipc_command := ipc_command.cfg
-MOE_CFG_test_namespace_composition := namespace_composition.cfg
-MOE_CFG_test_start := start.cfg
-MOE_CFG_test_rom_overwrite := rom_overwrite.cfg
+NED_CFG_test_arg := arg.cfg
+NED_CFG_test_exit_wait := exit_wait.cfg
+NED_CFG_test_ipc_command := ipc_command.cfg
+NED_CFG_test_namespace_composition := namespace_composition.cfg
+NED_CFG_test_start := start.cfg
+NED_CFG_test_rom_overwrite := rom_overwrite.cfg
 
-MOE_CFG_ipc_cmd_direct_loop := ipc_command_as_server.cfg
+NED_CFG_ipc_cmd_direct_loop := ipc_command_as_server.cfg
 TEST_TARGET_ipc_cmd_direct_loop := test_ipc_command
 
 REQUIRED_MODULES_test_ipc_command += ipc_command_x.cfg
-MOE_CFG_test_rw_module := rw_module.cfg
+NED_CFG_test_rw_module := rw_module.cfg
 REQUIRED_MODULES_test_rw_module += test_namespace_composition:rw
 
 include $(L4DIR)/mk/test.mk
