--- a/ned/server/src/Makefile
+++ b/ned/server/src/Makefile
@@ -6,7 +6,7 @@ TARGET		 = ned
 SRC_CC          := remote_mem.cc app_model.cc app_task.cc main.cc \
                    lua.cc lua_env.cc lua_ns.cc lua_cap.cc \
 	           lua_exec.cc lua_factory.cc lua_info.cc server.cc \
-		   lua_platform_control.cc
+		   lua_platform_control.cc lua_debug_obj.cc
 SRC_DATA        := ned.lua
 
 REQUIRES_LIBS   := libloader l4re-util l4re lua++ libpthread cxx_libc_io cxx_io
