l4sys: add new kernel interface for ARM SMC calls
This interface wraps SMC or HVC function calls according
to ARM's calling conventions.

Change-Id: I279763b11ce5888553b494defb1b3cb6021e77fb

--- a/l4sys/include/Makefile
+++ b/l4sys/include/Makefile
@@ -12,6 +12,7 @@ EXTRA_TARGET	+= capability kip task factory irq icu thread vcon \
                    rcv_endpoint        \
                    semaphore           \
                    iommu               \
+                   arm_smccc           \
                    cxx/ipc_array       \
                    cxx/ipc_basics      \
                    cxx/ipc_client      \
