uclibc: update unused code / features
This commit collects changes to files, architectures and features not
used by L4Re:

* host utilities / buildsystem:

Revert "ldconfig: add glibc compatibility fix"
Allow to select FDPIC ELF for arm architecture
rtld: Compile with -fno-unwind-tables -fno-asynchronous-unwind-tables
enable NPTL on TARGET_arm
nptl: Add pthread_mutex_getprioceiling and pthread_mutex_setprioceiling support

* architectures

ldso/arc: fix LD_DEBUG segv when printing R_ARC_NONE
ARC: Accommodate TLS fix in Binutils

* unused features

Fix bug in _dl_pread when using pread64 syscall
Add runtime support needed for C++ exceptions
arm/clone.S: Fix threading support
nptl: disable mprotect usage in stack protection
nptl: Disable fork and atfork on MMU-less systems.
nptl: Do not use madvise
nptl: Allow sem_open to work on MMU-less systems
nptl: Use vfork on MMU-less for system()
Fix shm_open posix compliance error code
sched_setaffinity: use the same style with glibc's
wordexp: Fix the usage of the internal _itoa function
bugfix renameat2 wrong implement.
do not expose recvmmsg/sendmmsg for unsupported kernels

Change-Id: Ia12b1969293245d65ef3f595d4366159b9084d33

--- a/uclibc/lib/contrib/uclibc/extra/Configs/Config.in
+++ b/uclibc/lib/contrib/uclibc/extra/Configs/Config.in
@@ -554,7 +554,7 @@ config UCLIBC_HAS_THREADS_NATIVE
 		   !TARGET_h8300 && \
 		   !TARGET_hppa && \
 		   !TARGET_ia64 && \
-		   ARCH_USE_MMU
+		   (ARCH_USE_MMU || TARGET_arm)
 	help
 	  If you want to compile uClibc with NPTL support, then answer Y.
 
