--- a/uclibc/lib/contrib/uclibc/libc/sysdeps/linux/arm/Makefile.arch
+++ b/uclibc/lib/contrib/uclibc/libc/sysdeps/linux/arm/Makefile.arch
@@ -23,7 +23,7 @@ $(eval $(call cache-output-var,IS_EABI,$(CC_IS_EABI_CHECK) -x c - -E -dM </dev/n
 
 CSRC-$(IS_EABI) += aeabi_assert.c aeabi_atexit.c aeabi_errno_addr.c \
 	aeabi_localeconv.c aeabi_memclr.c aeabi_memcpy.c \
-	aeabi_memmove.c aeabi_memset.c find_exidx.c
+	aeabi_memmove.c aeabi_memset.c find_exidx.c find_got.c
 SSRC-$(IS_EABI) += syscall-eabi.S
 CSRC-$(if $(IS_EABI),,y)) += syscall.c
 ARCH_OBJ_FILTEROUT-$(IS_EABI) := syscall.c
