l4sys: Arm: Add l4_task_vgicc_map
This add the kernel interface to map
the virtual GICC page to an address space.

We offer both the C and C++ interface.
C++ interface uses the L4::Vm class to implement
the call while the C interface embeds into the
l4_task* space.

Change-Id: I541c875a1e122052ba92e23800b1c30ab638e6ec
Requires-Change-Id: I9de0ae77845cd15713bde22c28b26ac1947417d4
Requires-Change-Id: If9791d22db89052d180087b1d09d571f899b8922

--- a/l4sys/include/Makefile
+++ b/l4sys/include/Makefile
@@ -4,7 +4,7 @@ L4DIR		?= $(PKGDIR)/../../..
 PKGNAME		= sys
 EXTRA_TARGET	+= capability kip task factory irq icu thread vcon \
                    smart_capability scheduler meta typeinfo_svr ipc_gate \
-                   vm debugger         \
+                   vm ARCH-arm/vm ARCH-arm64/vm debugger         \
                    platform_control    \
                    exception           \
                    kobject             \
