Add switch to reboot system after testing finishes
This passes the platform control capability to the test so that
it is able to reboot the machine if the '-b' argument is specified.

Change-Id: I1ae93f0aff80429fd553a6c8f584e2a8229a1e84

--- a/test/ned/namespace_composition.cfg
+++ b/test/ned/namespace_composition.cfg
@@ -21,6 +21,7 @@ L4.default_loader:start(
       -- it contains a name for the l4re module
       l4re = L4.Env.rom:q("l4re"),
     },
+    -- the platform control capability
+    pfc = L4.Env.icu,
   },
 }, "rom/" .. t.TEST_PROG)
-
