--- a/test/ned/rw_module.cfg
+++ b/test/ned/rw_module.cfg
@@ -7,6 +7,7 @@ L4.default_loader:start(
 {
   caps = {
     rom = L4.Env.rom,
+    pfc = L4.Env.icu,
     testns = {
       rw_module = L4.Env.rwfs:q("test_namespace_composition")():m("rw"),
     },
