--- a/test/ned/start.cfg
+++ b/test/ned/start.cfg
@@ -21,7 +21,8 @@ l:start(
       dummy_cap2 = dummy_cap2,
       test_namespace = {name1 = dummy_cap1, name2 = dummy_cap2, name_ph = "ph"},
       svr_cap = chan:svr(),
-      no_svr_cap = chan
+      no_svr_cap = chan,
+      pfc = L4.Env.icu,
     },
     log = {"test_start_log_tag", "red"}
   },
