--- a/test/ned/ipc_command.cfg
+++ b/test/ned/ipc_command.cfg
@@ -6,5 +6,5 @@ local l = L4.default_loader;
 local cmd = l:new_channel();
 
 local ned = l:start({ caps = { cmd = cmd:svr() } }, "rom/ned -c cmd rom/ipc_command_x.cfg")
-local prog = l:start({ caps = { cmd = cmd:mode("rw") } }, "rom/" .. t.TEST_PROG)
+local prog = l:start({ caps = { cmd = cmd:mode("rw"), pfc = L4.Env.icu } }, "rom/" .. t.TEST_PROG)
 
