--- a/test/ned/ipc_command_as_server.cfg
+++ b/test/ned/ipc_command_as_server.cfg
@@ -12,6 +12,8 @@ local L4 = require("L4")
 local l = L4.default_loader
 local cmd = l:new_channel()
 
-local prog = l:start({ caps = { cmd = cmd:mode("rw") } }, "rom/" .. t.TEST_PROG)
+local prog = l:start(
+  { caps = { cmd = cmd:mode("rw"), pfc = L4.Env.icu } },
+  "rom/" .. t.TEST_PROG)
 
 L4.server_loop(cmd)
