Use new way of specify flags for obj-files
Requires-Change-Id: Ib8939569e8423de575513998083778580ecd4497
Change-Id: Ieef2c187499c6ed7022d93db254eb63ce94340dd

--- a/l4util/lib/src/Makefile
+++ b/l4util/lib/src/Makefile
@@ -17,8 +17,7 @@ SRC_C                 = alloc.c getopt2.c micros2l4to.c rand.c sleep.c \
 SRC_CC                = llulc.cc
 CXXFLAGS              = -DL4_NO_RTTI -fno-exceptions -fno-rtti
 
-PRIVATE_INCDIR_ARCH-x86/perform.o = ARCH-x86
-PRIVATE_INCDIR_ARCH-x86/perform.s.o = ARCH-x86
+PRIVATE_INCDIR_ARCH-x86/perform.c = ARCH-x86
 
 include $(L4DIR)/mk/lib.mk
 
