Tests ensuring Moe doesn't give out its own sigma0 capability.
Change-Id: I324d2c7e385bb8b1d9eb895ff6603ec961cd158b

--- a/test/moe/Makefile
+++ b/test/moe/Makefile
@@ -3,7 +3,7 @@ L4DIR  ?= $(PKGDIR)/../..
 
 TEST_GROUP := l4re-core/moe
 
-REQUIRES_LIBS  := libpthread atkins
+REQUIRES_LIBS  := libpthread atkins libsigma0
 DEPENDS_PKGS   := atkins
 
 REQUIRED_MODULES  := moe_bootfs_example.txt
