Add C++ish [round,trunc]_[order,page] functions
Change-Id: Icd74cbe80c7f56c25161beee4cd988d98e82f419

--- a/l4sys/include/Makefile
+++ b/l4sys/include/Makefile
@@ -27,6 +27,7 @@ EXTRA_TARGET	+= capability kip task factory irq icu thread vcon \
                    cxx/ipc_legacy      \
                    cxx/smart_capability_1x \
                    cxx/types           \
+                   cxx/consts          \
 
 
 include $(L4DIR)/mk/include.mk
