test: l4re_file: mmap(), remap()
Change-Id: I92ea874467b9a187ac5c8e913a495b3d265a13d0

--- a/test/libc_backends/Makefile
+++ b/test/libc_backends/Makefile
@@ -11,4 +11,6 @@ DEPENDS_PKGS  := atkins
 REQUIRED_MODULES_test_l4re_file += l4re_file_testfile_ro
 REQUIRED_MODULES_test_l4re_file += l4re_file_testfile_rw:rw
 
+REQUIRED_MODULES_test_l4re_mmap += l4re_file_testfile_ro
+
 include $(L4DIR)/mk/test.mk
