test: l4re_file: write
Change-Id: If76d851cc217de2335e7a924956e6a633b9b24a9

--- a/test/libc_backends/l4re_write.cfg
+++ b/test/libc_backends/l4re_write.cfg
@@ -4,14 +4,14 @@ local t = require("rom/test_env")
 local L4 = require("L4")
 
 local l = L4.default_loader
+local vcon = l:new_channel()
 
 l:start(
   {
     caps = {
-      rwfs = L4.Env.rwfs,
-      new_rw = l:create_namespace({}):m("rw"),
+      vcon = vcon:svr()
     },
-    log = {"test_l4re_file_tag", "red"}
+    log = {"test_l4re_write_tag", "green"}
   },
   "rom/" .. t.TEST_PROG
 )
