test: socket noop tests still depend on atkins
Change-Id: I91a73061b5c65f7bc87dbbc05d6d692fb63929aa

--- a/test/libc_be_socket_noop/Makefile
+++ b/test/libc_be_socket_noop/Makefile
@@ -8,5 +8,6 @@ TEST_GROUP := l4re-core/libc_be_socket_noop
 MODE := static
 
 REQUIRES_LIBS := cxx_io cxx_libc_io libc_be_socket_noop
+DEPENDS_PKGS  := atkins
 
 include $(L4DIR)/mk/test.mk
