test: l4re_file: read from vcon
Rename the tests to reflect the different backends used.

Change-Id: I58f0fddeb2a65d1a4be26494cf34197db442c7b2

--- a/test/libc_backends/Makefile
+++ b/test/libc_backends/Makefile
@@ -3,14 +3,14 @@ L4DIR ?= $(PKGDIR)/../..
 
 TEST_GROUP    := l4re-core/libc_backends
 
-NED_CFG_test_l4re_file = l4re_file.cfg
-NED_CFG_test_l4re_write = l4re_write.cfg
+NED_CFG_test_l4re_file_ds = l4re_file_ds.cfg
+NED_CFG_test_l4re_file_vcon = l4re_file_vcon.cfg
 REQUIRES_LIBS := atkins
 REQUIRES_LIBS += libc_be_fs_noop libc_be_sem_noop libc_be_sig_noop
 DEPENDS_PKGS  := atkins
 
-REQUIRED_MODULES_test_l4re_file += l4re_file_testfile_ro
-REQUIRED_MODULES_test_l4re_file += l4re_file_testfile_rw:rw
+REQUIRED_MODULES_test_l4re_file_ds += l4re_file_testfile_ro
+REQUIRED_MODULES_test_l4re_file_ds += l4re_file_testfile_rw:rw
 
 REQUIRED_MODULES_test_l4re_mmap += l4re_file_testfile_ro
 
